# docu-retriever

./: .gitignore  Cargo.toml  README.md
docs/: SDD.md
src/: cli.rs  main.rs
src/core/: convert.rs  engine.rs  mod.rs
src/embeddings/: fastembed_provider.rs  mod.rs  openai_provider.rs
src/models/: chunk.rs  error.rs  mod.rs  output.rs
src/storage/: index_storage.rs  mod.rs
