[package]
name = "docu-retriever"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
arrow-array = "57.3"
arrow-schema = "57.3"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
lancedb = "0.26.2"
pulldown-cmark = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
text-splitter = { version = "0.8", features = ["markdown"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

# Embedding backends
fastembed = "4"
async-openai = "0.28"

[dev-dependencies]
tempfile = "3"
